2011-02-24  Roland Levillain  <roland@lrde.epita.fr>

	Make the interface of thinning algorithms uniform w.r.t. functors.

	* mln/topo/skeleton/priority_driven_thinning.hh
	(mln::topo::skeleton::priority_driven_thinning): Catch up
	with mln::topo::skeleton::breadth_first_thinning.
	* mln/topo/detach_point.hh: Turn into a functor to match the new
	interface of thinning algorithms.
	* tests/topo/skeleton/breadth_first_thinning.cc
	* tests/topo/skeleton/breadth_first_thinning_constrained.cc
	* tests/topo/skeleton/priority_driven_thinning.cc
	* tests/topo/skeleton/priority_driven_thinning_constrained.cc:
	Adjust.

2011-02-24  Roland Levillain  <roland@lrde.epita.fr>

	State a cell is not simple if it does not correspond to a facet.

	* mln/topo/is_simple_cell.hh
	(mln::topo::is_simple_cell<I, N, NL, NH>::operator()): Here.

2010-09-09  Roland Levillain  <roland@lrde.epita.fr>

	Use mln::data::paste to simplify mesh skeleton applications.

	* apps/mesh-segm-skel/mesh-complex-skel.cc,
	* apps/mesh-segm-skel/mesh-complex-max-curv-skel.cc,
	* apps/mesh-segm-skel/mesh-complex-pinv-curv-skel.cc:
	Here.

2010-09-09  Roland Levillain  <roland@lrde.epita.fr>

	Update mesh skeleton applications.

	* apps/mesh-segm-skel/mesh-complex-skel.cc,
	* apps/mesh-segm-skel/mesh-complex-max-curv-skel.cc,
	* apps/mesh-segm-skel/mesh-complex-pinv-curv-skel.cc:
	Catch up with the new interface of breadth-first thinning and
	auxiliary routines.

2010-09-09  Roland Levillain  <roland@lrde.epita.fr>

	More generic breadth-first-thinning-based skeleton transformations.

	* mln/topo/is_simple_cell.hh: Make this functor more generic.
	* mln/topo/detach_cell.hh (detach): Turn this function into a
	more generic functor.
	* mln/make/attachment.hh (mln::make::attachment)
	* mln/make/detachment.hh (mln::make::detachment):
	Make these routines more generic.
	* mln/topo/skeleton/breadth_first_thinning.hh
	(mln::topo::skeleton::breadth_first_thinning):
	Adjust.
	* headers.mk: Regen.
