@@ -1,5 +1,15 @@
 2011-02-24  Roland Levillain  <roland@lrde.epita.fr>
 
+	Revamp topology-related routines.
+
+	* mln/make/attachment.hh,
+	* mln/make/cell.hh,
+	* mln/make/detachment.hh,
+	* mln/topo/detach_cell.hh:
+	Do not require the face passed as argument to be a facet.
+
+2011-02-24  Roland Levillain  <roland@lrde.epita.fr>
+
 	Make the interface of thinning algorithms uniform w.r.t. functors.
 
 	* mln/topo/skeleton/priority_driven_thinning.hh
